--- a/.github/workflows/main_doc-class.yml
+++ b/.github/workflows/main_doc-class.yml
@@ -60,4 +60,5 @@ jobs:
         with:
           app-name: 'Doc-class'
           slot-name: 'Production'
+          package: '.'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EA422C623CD7453888DBA0B00DC4219A }}
